; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/ath5k/extr_ani.c_ath5k_ani_period_restart.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/ath5k/extr_ani.c_ath5k_ani_period_restart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath5k_ani_state = type { i64, i64, i64, i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ath5k_ani_state*)* @ath5k_ani_period_restart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ath5k_ani_period_restart(%struct.ath5k_ani_state* %0) #0 {
  %2 = alloca %struct.ath5k_ani_state*, align 8
  store %struct.ath5k_ani_state* %0, %struct.ath5k_ani_state** %2, align 8
  %3 = load %struct.ath5k_ani_state*, %struct.ath5k_ani_state** %2, align 8
  %4 = getelementptr inbounds %struct.ath5k_ani_state, %struct.ath5k_ani_state* %3, i32 0, i32 2
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.ath5k_ani_state*, %struct.ath5k_ani_state** %2, align 8
  %7 = getelementptr inbounds %struct.ath5k_ani_state, %struct.ath5k_ani_state* %6, i32 0, i32 5
  store i64 %5, i64* %7, align 8
  %8 = load %struct.ath5k_ani_state*, %struct.ath5k_ani_state** %2, align 8
  %9 = getelementptr inbounds %struct.ath5k_ani_state, %struct.ath5k_ani_state* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = load %struct.ath5k_ani_state*, %struct.ath5k_ani_state** %2, align 8
  %12 = getelementptr inbounds %struct.ath5k_ani_state, %struct.ath5k_ani_state* %11, i32 0, i32 4
  store i64 %10, i64* %12, align 8
  %13 = load %struct.ath5k_ani_state*, %struct.ath5k_ani_state** %2, align 8
  %14 = getelementptr inbounds %struct.ath5k_ani_state, %struct.ath5k_ani_state* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load %struct.ath5k_ani_state*, %struct.ath5k_ani_state** %2, align 8
  %17 = getelementptr inbounds %struct.ath5k_ani_state, %struct.ath5k_ani_state* %16, i32 0, i32 3
  store i64 %15, i64* %17, align 8
  %18 = load %struct.ath5k_ani_state*, %struct.ath5k_ani_state** %2, align 8
  %19 = getelementptr inbounds %struct.ath5k_ani_state, %struct.ath5k_ani_state* %18, i32 0, i32 2
  store i64 0, i64* %19, align 8
  %20 = load %struct.ath5k_ani_state*, %struct.ath5k_ani_state** %2, align 8
  %21 = getelementptr inbounds %struct.ath5k_ani_state, %struct.ath5k_ani_state* %20, i32 0, i32 1
  store i64 0, i64* %21, align 8
  %22 = load %struct.ath5k_ani_state*, %struct.ath5k_ani_state** %2, align 8
  %23 = getelementptr inbounds %struct.ath5k_ani_state, %struct.ath5k_ani_state* %22, i32 0, i32 0
  store i64 0, i64* %23, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
